--- a/model.ipynb
+++ b/model.ipynb
@@ -9,6 +9,10 @@
     }
    },
    "source": [
+    "# Model\n",
+    "\n",
+    "## Psychologist\n",
+    "\n",
     "We look for the optimal design $i^{**}$ such as:\n",
     "\n",
     "\\begin{equation}\n",
@@ -51,8 +55,39 @@
     "\\begin{split}\n",
     "I_t(\\Theta; Y\\mid i) &= H_t(\\Theta \\mid i) - H_t(\\Theta \\mid Y, i)\\\\\n",
     "    &= H_t(Y \\mid i) - H_t(Y \\mid \\Theta, i)\n",
-    "\\end{split}"
+    "\\end{split}\n",
+    "\n",
+    "## Teacher \n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "- \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} ( \\tau - p(i) )^2 + \n",
+    "\\alpha \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} p(i) ^{1-\\xi}\n",
+    "- \\beta \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} \\eta(i)^t\n",
+    " + (1-\\alpha-\\beta) \\dfrac{\\mid S \\mid}{t}\n",
+    "\\end{equation}\n",
+    "\n",
+    "## Learner \n",
+    "\n",
+    "\\begin{equation}\n",
+    "P_{i} = \\exp(-\\eta_i(t)(t - t_r)),\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\eta_i(t) = \n",
+    "\\begin{cases}\n",
+    "\\alpha & \\text{ if first presentation},\\\\\n",
+    " (1 - \\beta)\\eta_i(t_r) & \\text{otherwise.}\\\\ \n",
+    "\\end{cases}\n",
+    "\\end{equation}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -64,25 +99,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
