--- a/model.ipynb
+++ b/model.ipynb
@@ -16,13 +16,13 @@
     "We look for the optimal design $i^{**}$ such as:\n",
     "\n",
     "\\begin{equation}\n",
-    "i^{**} = \\arg \\max_{i}{U(i)}\n",
+    "i^{**} = \\arg \\max_{i}{U^P(i)}\n",
     "\\end{equation}\n",
     "\n",
-    "We define the utility function of $i$:\n",
+    "We define a utility function for the 'psychologist' $U^P$:\n",
     "\n",
     "\\begin{equation}\n",
-    "U(i) = I_t(\\Theta; Y\\mid i) + \\arg \\max_{j\\in N} I_{t+1}(\\Theta; Y\\mid j)\n",
+    "U^P(i) = I_t(\\Theta; Y\\mid i) + \\arg \\max_{j\\in N} I_{t+1}(\\Theta; Y\\mid j)\n",
     "\\end{equation}\n",
     "\n",
     "Behavioral output:\n",
@@ -59,25 +59,31 @@
     "\n",
     "## Teacher \n",
     "\n",
+    "We define a utility function for the 'teacher' $U^T$:\n",
     "\n",
-    "\\begin{equation}\n",
-    "- \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} ( \\tau - p(i) )^2 + \n",
-    "\\alpha \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} p(i) ^{1-\\xi}\n",
-    "- \\beta \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} \\eta(i)^t\n",
+    "\\begin{equation} \n",
+    "U^T(i) = \\alpha \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} p^{t+1}(i) ^{1-\\xi}\n",
+    "- \\beta \\dfrac{1}{\\mid S \\mid} \\sum_{i \\in S} \\eta^{t+1}(i)\n",
     " + (1-\\alpha-\\beta) \\dfrac{\\mid S \\mid}{t}\n",
+    "\\end{equation}\n",
+    "given that $i$ is presented at $t$.\n",
+    "\n",
+    "Eventualy, add a term for motivation:\n",
+    "\\begin{equation} \n",
+    "- ( \\tau - p(i) )^2\n",
     "\\end{equation}\n",
     "\n",
     "## Learner \n",
     "\n",
     "\\begin{equation}\n",
-    "P_{i} = \\exp(-\\eta_i(t)(t - t_r)),\n",
+    "p^t(i) = \\exp(-\\eta^t(i)(t - t_r(i))),\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "\\eta_i(t) = \n",
+    "\\eta^t(i) = \n",
     "\\begin{cases}\n",
     "\\alpha & \\text{ if first presentation},\\\\\n",
-    " (1 - \\beta)\\eta_i(t_r) & \\text{otherwise.}\\\\ \n",
+    " (1 - \\beta)\\eta^{t_r(i)}(i) & \\text{otherwise.}\\\\ \n",
     "\\end{cases}\n",
     "\\end{equation}"
    ]
@@ -111,10 +117,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
